# tap-protocol

./: .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/tap_protocol_nativesdk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tap_protocol_nativesdk/: IsoDepCaller.java  IsoDepHolder.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tap_protocol_nativesdk/: ExampleUnitTest.java
contrib/bitcoin-core/: CMakeLists.txt
contrib/bitcoin-core/src/: base58.cpp  base58.h  bech32.cpp  bech32.h  chainparams.h  hash.cpp  hash.h  psbt.cpp  psbt.h  pubkey.cpp  pubkey.h  uint256.cpp  uint256.h
contrib/bitcoin-core/src/primitives/: block.h  transaction.cpp  transaction.h
contrib/bitcoin-core/src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sign.cpp  sign.h  standard.cpp  standard.h
contrib/bitcoin-core/src/support/: cleanse.cpp  cleanse.h
contrib/bitcoin-core/src/support/allocators/: zeroafterfree.h
contrib/bitcoin-core/src/util/: strencodings.cpp  strencodings.h  string.h
gradle/wrapper/: gradle-wrapper.properties
include/tap_protocol/: cktapcard.h  hash_utils.h  hwi_tapsigner.h  secp256k1_utils.h  tap_protocol.h  transport.h  utils.h
src/: cktapcard.cpp  hash_utils.cpp  hwi_tapsigner.cpp  satscard.cpp  secp256k1_utils.cpp  tap_protocol.cpp  tapsigner.cpp  transport.cpp  utils.cpp
tests/: connection_test.cpp  emulator.h  hwi_tapsigner_test.cpp  satscard_test.cpp  secp256k1_test.cpp  tapsigner_test.cpp  transport_test.cpp  utils_test.cpp
tests/contrib/doctest/: stringification.h
tools/: build_android.sh  build_android_libraries.sh  build_ios.sh  build_linux.sh  build_secp256k1_deprecated.sh  build_unix_libraries.sh
